--- a/GroceryCoKiosk/appsettings.json
+++ b/GroceryCoKiosk/appsettings.json
@@ -1,10 +1,11 @@
 {
+  "DataLocation": "Data/products.json",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Mircosoft": "Information",
-        "System":  "Warning"
+        "System": "Warning"
       }
 
     }
