--- a/GroceryCoKiosk/GroceryCoKiosk.csproj
+++ b/GroceryCoKiosk/GroceryCoKiosk.csproj
@@ -16,6 +16,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\products.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
